[gd_scene load_steps=12 format=3 uid="uid://dr61ppjfn6pra"]

[ext_resource type="Script" path="res://scripts/bomb.gd" id="1_ihx8n"]
[ext_resource type="Texture2D" uid="uid://mic0wsk2kj1x" path="res://assets/bomb.png" id="2_2v5vh"]
[ext_resource type="Texture2D" uid="uid://62nbuxv73v04" path="res://assets/area.png" id="2_p7e7l"]

[sub_resource type="Animation" id="Animation_doqmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_8xrqn"]
resource_name = "chase"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_l6uw4"]
resource_name = "get_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 16]
}

[sub_resource type="Animation" id="Animation_qxxim"]
resource_name = "boom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.242625, 0.519155),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arr:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00853142, 0.239189, 0.553281),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wephs"]
_data = {
"RESET": SubResource("Animation_doqmp"),
"boom": SubResource("Animation_qxxim"),
"chase": SubResource("Animation_8xrqn"),
"get_hit": SubResource("Animation_l6uw4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2pkgv"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ownya"]
radius = 127.004

[sub_resource type="CircleShape2D" id="CircleShape2D_p7u8k"]
radius = 11.0

[node name="Bomb" type="CharacterBody2D"]
script = ExtResource("1_ihx8n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wephs")
}

[node name="arr" type="Sprite2D" parent="."]
position = Vector2(0, 0.500001)
scale = Vector2(1.625, 1.5625)
texture = ExtResource("2_p7e7l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -1)
texture = ExtResource("2_2v5vh")
hframes = 4
vframes = 5
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2pkgv")

[node name="ChaseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource("CircleShape2D_ownya")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_p7u8k")
disabled = true

[connection signal="body_entered" from="ChaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
